@@ -11,6 +11,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -61,7 +62,7 @@ public class TextTableHelper {
 		List<TableHeader> headers = IntStream
 			.range(1, longestRow.size() + 1)
 			.mapToObj(index -> new TableHeader(String.format("Column %d", index), TextDataType.STRING))
-			.toList();
+			.collect(Collectors.toList()); //NOSONAR
 
 		return generateTextTable(headers, rows);
 	}
@@ -104,7 +105,7 @@ public class TextTableHelper {
 		List<TableHeader> headers = Arrays
 			.stream(columns)
 			.map(columnName -> new TableHeader(columnName, TextDataType.STRING))
-			.toList();
+			.collect(Collectors.toList()); //NOSONAR
 
 		return generateTextTable(headers, rows);
 	}
@@ -129,7 +130,7 @@ public class TextTableHelper {
 		List<TableHeader> headers = columns
 			.stream()
 			.map(columnName -> new TableHeader(columnName, TextDataType.STRING))
-			.toList();
+			.collect(Collectors.toList()); //NOSONAR
 
 		return generateTextTable(headers, rows);
 	}
@@ -208,7 +209,7 @@ public class TextTableHelper {
 			.stream()
 			.filter(Objects::nonNull)
 			.map(row -> cleanRow(row, headersSize))
-			.toList();
+			.collect(Collectors.toList()); //NOSONAR
 	}
 
 	/**
@@ -236,7 +237,7 @@ public class TextTableHelper {
 
 			return Stream
 				.concat(result.stream(), Stream.generate(() -> N_A).limit((long) headersSize - result.size()))
-				.toList();
+				.collect(Collectors.toList()); //NOSONAR
 
 		} else if (result.size() > headersSize) {
 
@@ -244,7 +245,7 @@ public class TextTableHelper {
 			return result
 				.stream()
 				.limit(headersSize)
-				.toList();
+				.collect(Collectors.toList()); //NOSONAR
 		}
 
 		return result;
